--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,16 @@
     font-family: cursive;
     color: black;
     background-color: red;
-    font-size: xx-large;
+    font-size: 60px;
     text-align: center;
+}
+
+.odin-center {
+    display: block;
+    width: auto;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .recipes-list {
